--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name = "keywords" 
 			content = "pustka, nic, nic ważnego, nihilizm, nietsche, schopenhauer, nie warto było, zbigniew stonoga, rozpacz">
 		<meta name = "description" content = "To strona o zupełnie niczym. Nawet Salomon z tego nie naleje">
+		<link rel="stylesheet" type="text/css" href="oprawa.css" media="screen" />
 
 	</head>
 	
