Tables and form
New CSSes, at least 8-11

--- a/pulvis.html
+++ b/pulvis.html
@@ -9,7 +9,7 @@
 		<meta name = "keywords" 
 			content = "pustka, nic, nic ważnego, nihilizm, nietsche, schopenhauer, nie warto było, zbigniew stonoga, rozpacz">
 		<meta name = "description" content = "To strona o zupełnie niczym. Nawet Salomon z tego nie naleje">
-
+		<link rel="stylesheet" type="text/css" href="formularzyk.css" media="screen" />
 	</head>
 	
 	<body>
