Embedded CSS sheet
Embedded CSS sheet with pseudo classes active, hover,link,visited.

--- a/pustka.html
+++ b/pustka.html
@@ -10,6 +10,30 @@
 			content = "pustka, nic, nic ważnego, nihilizm, nietsche, schopenhauer, nie warto było, zbigniew stonoga, rozpacz">
 		<meta name = "description" content = "To strona o zupełnie niczym. Nawet Salomon z tego nie naleje">
 
+		<style type ="text/css">
+			a:link{
+				font-style:oblique;
+				font-size:100%
+			}
+			
+			a:visited{
+				color: LightSalmon;
+				font-size: 90%
+				font-style: italic;
+			}
+			
+			a:hover{
+				font-size:120%;
+				font-style:normal;
+				color:DarkGreen;
+			}
+			
+			a:active{
+				font-size:120%;
+				font-style:normal;
+				color:Magenta;
+			}
+		</style>
 	</head>
 	
 	<body>
