Points 2,5 completed, point 12 in half
TODO: 4, 6, 13

--- a/pustka.html
+++ b/pustka.html
@@ -33,6 +33,14 @@
 				font-style:normal;
 				color:Magenta;
 			}
+			
+			:not(li){
+			font-size:normal;
+			}
+			
+			li:nth-last-child(4){
+				font-weight:bold;
+			}
 		</style>
 	</head>
 	
@@ -51,27 +59,19 @@
 		</section>
 		<section id = "odnosniki">
 		
-			<ul>
-				<li>
-					<a href=""></a>
-				</li>
-				<li>
-					<a href=""></a>
-				</li>
-				<li>
-					<a href=""></a>
-				</li>
-				<li>
-					<a href=""></a>
-				</li>				
-				<li>
-					<ol>
-						<li><a href=""></a>
-						<li><a href=""></a>
-
-					</ol>
-				</li>				
-				</ul>
+			<ol>
+				<li><a href="www.google.pl">COŚ SIĘ, COŚ SIĘ POPSUŁO</a>
+				<li><a href="www.google.pl">I NIE BYŁO MNIE SŁYCHAĆ</a>
+				<li><a href="www.google.pl">TO POWTÓRZĘ</a>
+				<li><a href="www.google.pl">JESZCZE</a>
+				<li><a href="www.google.pl">RAZ</a>
+				<li><a href="www.google.pl">WYNIK WYBORCZY</a>
+				<li><a href="www.google.pl">KWW STONOGI</a>
+				<li><a href="www.google.pl">TO JEST JAKAŚ PORAŻKA</a>
+				<li><a href="www.google.pl">TO JEST JAKIEŚ NIEPOROZUMIENIE</a>
+				<li><a href="www.google.pl">JEŚLI TYLE DLA WAS ZNACZY</a>
+				<li><a href="www.google.pl">TAKIE ZAANGAŻOWANIE SPOŁECZNE</a>
+			</ol>
 		
 		</section>
 		<footer>
