--- a/nic.html
+++ b/nic.html
@@ -28,10 +28,10 @@
 		</section>
 		<section id = "akapity">
 		
-			<p>
+			<p class="thight">
 				Lorem <em>ipsum dolor sit amet</em>, consectetur adipiscing elit. Vivamus fringilla quam ut egestas blandit. Praesent erat elit, volutpat quis dolor sed, posuere tempor nisl. Praesent eu ante cursus, ullamcorper mauris sed, elementum elit. Sed ut elit eros. Pellentesque rutrum, leo nec ultrices efficitur, arcu libero luctus sem, quis malesuada nisl ligula in mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis id finibus mi. Fusce consectetur est sit amet odio sagittis rutrum. Maecenas eu neque ante. Curabitur diam mi, varius et metus in, pharetra tincidunt erat. Pellentesque congue luctus rhoncus. Phasellus a pharetra orci. Pellentesque elementum metus eget nunc eleifend pellentesque. Aliquam suscipit auctor nisi, eget pharetra eros tempor ut. Ut sodales eget sem id molestie. Donec in massa porttitor, pretium tellus ut, vestibulum tortor. 
 			</p>
-			<p>
+			<p style= "font-family:fixedsys,monospace;">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus fringilla quam ut egestas blandit. Praesent erat elit, volutpat quis dolor sed, posuere tempor nisl. Praesent eu ante cursus, ullamcorper mauris sed, elementum elit. Sed ut elit eros. Pellentesque rutrum, leo nec ultrices efficitur, arcu libero luctus sem, quis malesuada nisl ligula in mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Duis id finibus mi. Fusce consectetur est sit amet odio sagittis rutrum. Maecenas eu neque ante. Curabitur diam mi, varius et metus in, pharetra tincidunt erat. Pellentesque congue luctus rhoncus. Phasellus a pharetra orci. Pellentesque elementum metus eget nunc eleifend pellentesque. Aliquam suscipit auctor nisi, eget pharetra eros tempor ut. Ut sodales eget sem id molestie. Donec in massa porttitor, pretium tellus ut, vestibulum tortor. 
 			</p>			
 			<p>
